<resources>
    <string name="app_name">Weeds3D</string>
    <string name="version">Versión 1.0</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gopro_no_reach">It is not possible to get the GoPro informationo</string>
    <string name="retry">Retry</string>
    <string name="start_instructions">Start</string>
    <string name="stop_video">Stop Video</string>
    <string name="stop_instructions">Timer indicates video recording time. Press the stop button to end it.</string>
    <string name="video_taken">Video has been successfully saved. You can view it in the history.</string>
    <string name="location_error">Unable to access the location, check the device permissions, and restart the application.</string>
    <string name="historic">Historic</string>
    <string name="farms">Farms</string>
    <string name="connection">Check Connection</string>
    <string name="settings">Settings</string>
    <string name="video">Video</string>
    <string name="gopro_connected">GoPro is connected</string>
    <string name="gopro_disconnected">GoPro is disconnected</string>
    <string name="ok">Ok</string>
    <string name="first_video">First Video</string>
    <string name="second_video">Second Video</string>
    <string name="no_entries">No Entries</string>
    <string name="entry_num">Entry #</string>
    <string name="cancel">Cancel</string>
    <string name="go_to_setting">Go to settings</string>
    <string name="conditions_title">Select the weather conditions or special comments</string>
    <string name="sunny">Sunny</string>
    <string name="partial_cloudy">Partial cloudy</string>
    <string name="cloudy">Cloudy</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="select_the_sensors_that_you_want_to_use">Select the sensors you want to use</string>
    <string name="save">Save</string>
    <string name="see_detail">See details</string>
    <string name="create_a_farm">Create a farm</string>
    <string name="gopro_synch">GoPro Synch</string>
    <string name="filters">Filters</string>
    <string name="farm_name">Farm Name</string>
    <string name="video_download_success">Downloading successfully</string>
    <string name="video_download_fail">Error downloading video</string>
    <string name="video_upload_success">Uploading successfully</string>
    <string name="video_save_fail">Error saving video locallyo</string>
    <string name="data_sync">Data Synch</string>
    <string name="download_all">Download all</string>
    <string name="sync_all">Sync all</string>
    <string name="no_sync">Not synchronized</string>
    <string name="local_sync">Locally synchronized</string>
    <string name="azure_sync">Synchronized with Azure</string>
    <string name="close">Close</string>
    <string name="name">Name</string>
    <string name="create_farm_instructions">To continue, set a new farm name</string>
    <string name="create_new_farm">Create new farm</string>
    <string name="comments">Other comments</string>
    <string name="no_comments">No comments</string>
    <string name="height">Height</string>
    <string name="conditions_description">Check weather conditions and update before each video if necessary.</string>
    <string name="farm">Farm</string>
    <string name="to_continue">Continue</string>
    <string name="calibration_mode">Calibration Mode</string>
    <string name="go_pro_wifi_reminder">Remember to connect this device to GoPro Wifi</string>
    <string name="go_pro_gopro_disconnected">GoPro is disconnected</string>
    <string name="wifi_reminder">To synchronize with azure, connect this device to a network with a data connection</string>
    <string name="welcome">Weeds3D application controls a GoPro camera and generates a database of videos and metada. 3D image processing happens in Azure cloud computing, where we identify weed species and measures biomass. Enjoy the APP.</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="b1">B1</string>
    <string name="b2">B2</string>
    <string name="c1">CC1</string>
    <string name="c2">CC2</string>
    <string name="video_info">Videos: B1(%1$d) B2(%2$d) CC1(%3$d) CC2(%4$d)</string>
    <string name="download">Download</string>
    <string name="upload">Upload</string>
    <string-array name="state_array">
        <item>MD</item>
        <item>NC</item>
    </string-array>
    <string-array name="group_array">
        <item>GROW</item>
        <item>REMOTE</item>
        <item>SENSING</item>
    </string-array>
</resources>