<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="100dp"
    tools:context=".MainActivity">
    <TextView
        android:textColor="@color/white"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:textStyle="bold"
        android:text="@string/app_name" />

    <TextView
        android:textColor="@color/white"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:text="@string/welcome" />

    <Button
        android:layout_marginTop="30dp"
        android:onClick="didContinueClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_continue" />
  </LinearLayout>