<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="800dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/dialog_bg"
    android:padding="20dp"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_a_farm"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/main_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_farm_instructions"
        android:textSize="18sp"
        android:textColor="@color/main_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView" />

    <Spinner
        android:id="@+id/stateSpinner"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/edit_text_bg"
        app:layout_constraintTop_toBottomOf="@id/subtitleTextView"
        android:layout_height="50dp" />

    <Spinner
        android:id="@+id/groupSpinner"
        android:layout_width="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:background="@drawable/edit_text_bg"
        app:layout_constraintTop_toBottomOf="@id/subtitleTextView"
        android:layout_height="50dp" />
    
    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:hint="@string/farm_name"
        app:layout_constraintTop_toBottomOf="@id/groupSpinner"
        android:background="@drawable/edit_text_bg" />

    <androidx.appcompat.widget.AppCompatButton
        android:background="@drawable/secondary_button_bg"
        android:text="@string/cancel"
        android:id="@+id/cancelButton"
        android:layout_width="0dp"
        android:textColor="@color/main_red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toBottomOf="@id/nameEditText"
        android:layout_height="50dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:background="@drawable/primary_button_bg"
        android:text="@string/to_continue"
        android:id="@+id/continueButton"
        android:textColor="@color/white"
        android:layout_width="0dp"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toBottomOf="@id/nameEditText"
        android:layout_height="50dp" />

</androidx.constraintlayout.widget.ConstraintLayout>