<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CameraFragment">

    <ImageView
        android:id="@+id/playImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/ic_baseline_play_circle_outline_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/playTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_instructions"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@id/playImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/playGroup"
        tools:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="playImageView, playTextView" />

    <Chronometer
        android:id="@+id/hourTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textSize="52sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/stopTextView"
        android:layout_marginBottom="20dp"
        android:text="@string/stop_instructions"
        android:layout_width="400dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/hourTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="#FFFFFF"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/stopButton"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/hourTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_video" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/stopGroup"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="stopTextView, stopButton, hourTextView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/infoCardView"
        app:cardCornerRadius="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/playImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="500dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:padding="20dp"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="20sp"
                android:textColor="@color/main_bg"
                android:text="@string/farm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/farmTextView"
                android:textStyle="bold"
                android:textSize="32sp"
                android:textColor="@color/main_bg"
                tools:text="CO-GROW-HHH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/farmTypeView"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginTop="5dp"
                android:textColor="@color/main_bg"
                tools:text="BB2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/numberVideoTextView"
                android:textSize="20sp"
                android:textColor="@color/main_bg"
                android:text="@string/first_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        app:cardCornerRadius="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/infoCardView"
        android:layout_width="250dp"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:padding="20dp"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/editImageView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/ic_baseline_edit_24"
                android:layout_width="30dp"
                android:layout_height="30dp" />
            <ImageView
                android:id="@+id/weatherImageView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/ic_sun"
                android:layout_marginTop="20dp"
                android:layout_width="50dp"
                android:layout_height="50dp" />
            <TextView
                android:id="@+id/heightTitle"
                app:layout_constraintTop_toBottomOf="@id/weatherImageView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/main_bg"
                android:text="@string/height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/heightTextView"
                app:layout_constraintTop_toBottomOf="@id/heightTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="16sp"
                android:textColor="@color/main_bg"
                tools:text="150cm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/commentsTitle"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/heightTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/main_bg"
                android:text="@string/comments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:gravity="center"
                android:id="@+id/commentsTextView"
                app:layout_constraintTop_toBottomOf="@id/commentsTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="16sp"
                android:textColor="@color/main_bg"
                android:text="@string/no_comments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:gravity="center"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/commentsTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/main_bg"
                android:text="@string/conditions_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>