<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="500dp"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:id="@+id/closeButton"
                android:src="@android:drawable/ic_menu_close_clear_cancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/close" />

            <TextView
                android:textAlignment="center"
                android:id="@+id/titleTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="40dp"
                android:text="@string/conditions_title"
                android:textColor="@color/main_bg"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_marginStart="20dp"
                android:id="@+id/sunnyImageView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="32dp"
                android:src="@drawable/ic_sun"
                app:layout_constraintStart_toStartOf="@+id/titleTextView"
                app:layout_constraintTop_toBottomOf="@+id/titleTextView"
                android:contentDescription="@string/sunny" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sunny"
                android:id="@+id/sunnyTextView"
                android:layout_marginStart="20dp"
                android:textColor="@color/main_bg"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/sunnyImageView"
                app:layout_constraintStart_toEndOf="@+id/sunnyImageView"
                app:layout_constraintTop_toTopOf="@+id/sunnyImageView" />

            <RadioButton
                android:layout_marginEnd="20dp"
                android:id="@+id/sunnyRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/main_bg"
                app:layout_constraintBottom_toBottomOf="@+id/sunnyImageView"
                app:layout_constraintEnd_toEndOf="@+id/titleTextView"
                app:layout_constraintTop_toTopOf="@+id/sunnyImageView" />



            <ImageView
                android:id="@+id/partialCloudImageView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="32dp"
                android:src="@drawable/ic_clouds_and_sun"
                app:layout_constraintStart_toStartOf="@+id/sunnyImageView"
                app:layout_constraintTop_toBottomOf="@+id/sunnyImageView"
                android:contentDescription="@string/partial_cloudy" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/partial_cloudy"
                android:id="@+id/partialCloudTextView"
                android:layout_marginStart="20dp"
                android:textColor="@color/main_bg"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/partialCloudImageView"
                app:layout_constraintStart_toEndOf="@+id/partialCloudImageView"
                app:layout_constraintTop_toTopOf="@+id/partialCloudImageView" />

            <RadioButton
                android:id="@+id/partialCloudRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/main_bg"
                app:layout_constraintBottom_toBottomOf="@+id/partialCloudImageView"
                app:layout_constraintEnd_toEndOf="@+id/sunnyRadioButton"
                app:layout_constraintTop_toTopOf="@+id/partialCloudImageView" />


            <ImageView
                android:id="@+id/cloudyImageView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="32dp"
                android:src="@drawable/ic_cloud"
                app:layout_constraintStart_toStartOf="@+id/sunnyImageView"
                app:layout_constraintTop_toBottomOf="@+id/partialCloudImageView"
                android:contentDescription="@string/cloudy" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cloudy"
                android:id="@+id/cloudyTextView"
                android:layout_marginStart="20dp"
                android:textColor="@color/main_bg"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/cloudyImageView"
                app:layout_constraintStart_toEndOf="@+id/cloudyImageView"
                app:layout_constraintTop_toTopOf="@+id/cloudyImageView" />

            <RadioButton
                android:id="@+id/cloudyRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/main_bg"
                app:layout_constraintBottom_toBottomOf="@+id/cloudyImageView"
                app:layout_constraintEnd_toEndOf="@+id/sunnyRadioButton"
                app:layout_constraintTop_toTopOf="@+id/cloudyImageView" />

            <EditText
                android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp"
                android:layout_marginTop="40dp"
                android:id="@+id/heightEditText"
                android:inputType="number"
                android:textColor="@color/main_bg"
                android:textColorHint="@android:color/darker_gray"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/height"
                android:layout_width="match_parent"
                app:layout_constraintTop_toBottomOf="@id/cloudyImageView"
                android:layout_height="40dp" />

            <EditText
                android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp"
                android:layout_marginTop="40dp"
                android:id="@+id/commentsEditText"
                android:lines="2"
                android:textColor="@color/main_bg"
                android:textColorHint="@android:color/darker_gray"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/comments"
                android:layout_width="match_parent"
                app:layout_constraintTop_toBottomOf="@id/heightEditText"
                android:layout_height="80dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/continueButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="44dp"
                android:background="@drawable/primary_button_bg"
                android:text="@string/to_continue"
                android:textColor="@android:color/white"
                android:layout_margin="40dp"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/commentsEditText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>