<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    tools:context=".HistoricFragment"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:padding="20dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/noSyncTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_sync"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/noSyncRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/noSyncTextView" />

        <TextView
            android:id="@+id/localSyncedTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/local_sync"
            android:textColor="@color/white"
            android:layout_marginTop="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/noSyncRecyclerView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/localSyncedRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/localSyncedTextView" />

        <TextView
            android:id="@+id/remoteSyncedTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/azure_sync"
            android:textColor="@color/white"
            android:layout_marginTop="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/localSyncedRecyclerView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/remoteSyncedRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/remoteSyncedTextView" />
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>